gccida/c1/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7297:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7297:5: error: use of undeclared identifier 'real_insn'
rtx real_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7317:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7317:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7307:9: note: 'v20' declared here
__int64 v20; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7323:4: error: expected ';' after expression
rtx v36; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7323:5: error: use of undeclared identifier 'v36'
rtx v36; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7342:20: error: use of undeclared identifier 'uid_cuid_0'
v8 = *( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7347:1: error: use of undeclared identifier 'real_insn'; did you mean 'prev_insn'?
real_insn = next_real_insn( insn); 
^~~~~~~~~
prev_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:272:12: note: 'prev_insn' declared here
static rtx prev_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7349:7: error: use of undeclared identifier 'real_insn'
v47 = real_insn; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7358:32: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
if ( data->path[v13].status != NOT_TAKEN_0 ) 
                               ^~~~~~~~~~~
                               NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7360:26: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
data->path[v13].status = NOT_TAKEN_0; 
                         ^~~~~~~~~~~
                         NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7387:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7394:49: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( rtx_class[v19] == 105 && ( v20 = ( __int64)rtx[2], *( _WORD *)v20 == 39) ) 
                                                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7399:46: error: use of undeclared identifier 'uid_cuid_0'
if ( ( int)rtint <= max_uid && *( ( _DWORD *)uid_cuid_0 + rtint) >= v16 ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7400:21: error: use of undeclared identifier 'uid_cuid_0'
v16 = *( ( _DWORD *)uid_cuid_0 + rtint); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7403:21: error: use of undeclared identifier 'uid_cuid_0'
v22 = *( ( _DWORD *)uid_cuid_0 + rtint); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7412:32: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
if ( data->path[v46].status != NOT_TAKEN_0 ) 
                               ^~~~~~~~~~~
                               NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:580:26: note: 'NOT_TAKEN' declared here
      enum taken {TAKEN, NOT_TAKEN, AROUND} status;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7413:13: error: expected ';' after expression
rtx = ( rtx)rtx[4]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/cse.c:7420:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( v23 = ( __int64)rtx[2], *( _WORD *)v23 != 47) 
                     ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_end_of_basic_block/src/obj/cse.o] Error 1
